# sales-automation

./: .dockerignore  .env.example  .gitignore  .npmrc  CHECK-LOCAL-CI.cmd  Dockerfile  README.md  SETUP-LOCAL-CI-RUNNER.cmd  package.json  render.yaml  tsconfig.base.json  tsconfig.linkedin-sales-nav.json  tsconfig.vercel.json  vercel.json
agents/: README.md  pyproject.toml
agents/acquisition_worker/: __init__.py  browser.py  checkpoint.py  cli.py  ingestion.py  jsonl.py  models.py  qualification.py  redaction.py  runner.py
agents/config/: upwork.saved-searches.example.json  worker.example.json
agents/fixtures/: sample_opportunities.html
agents/tests/: test_fixture_runner.py  test_ingestion.py  test_models.py  test_qualification.py  test_redaction.py  test_upwork_adapter.py
workers/acquisition/: .gitignore  CHECK-ACQUISITION-V4.cmd  CHECK-UPWORK-AUTOMATION.cmd  CHECK-UPWORK-NORMAL-CHROME-CAPTURE.cmd  CONFIGURE-PROSPECT-DESK-INGESTION.cmd  CONNECT-ACCOUNTS.cmd  DIAGNOSE-ACQUISITION-V4.cmd  INSTALL-UPWORK-AUTOMATION.cmd  INSTALL-UPWORK-NORMAL-CHROME-CAPTURE-V2.cmd  INSTALL-UPWORK-NORMAL-CHROME-CAPTURE.cmd  OPEN-ACQUISITION-REVIEW.cmd  OPEN-LINKEDIN-LEAD-SEARCHES.cmd  OPEN-UPWORK-SEARCHES.cmd  PREPARE-LINKEDIN-EXTENSION.cmd  PREPARE-UPWORK-EXTENSION.cmd  README.md  ROLLBACK-ACQUISITION-V4.cmd  RUN-UPWORK-AUTOMATION-NOW.cmd  RUN-UPWORK-PILOT.cmd  RUN-UPWORK-STABILITY-TEST.cmd  SETUP-WINDOWS.md  START-ACQUISITION-V4.cmd  START-HERE-ACQUISITION-V4.cmd  START-HERE.cmd  UNINSTALL-UPWORK-AUTOMATION.cmd  UPWORK-AUTOMATION-WINDOWS.md  VALIDATE-ACCOUNTS.cmd  pyproject.toml
(+274 files in other folders)
